<?xml version="1.0"?>
<package format="2">
    <name>groot</name>
    <version>1.1.0</version>
    <description>Graphical editor to create behaviour trees</description>

    <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
    <maintainer email="apaegue@upo.es">Alvaro Paez</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>behavior_tree_core</build_depend>
    <build_depend>qtbase5-dev</build_depend>
    <build_depend>libqt5-opengl-dev</build_depend>
    <build_depend>libqt5-svg-dev</build_depend>
    <build_depend>libzmq3-dev</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>rosbag_storage</build_depend>

    <build_export_depend>cmake_modules</build_export_depend>
    <build_export_depend>pluginlib</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>behavior_tree_core</build_export_depend>
    <build_export_depend>qtbase5-dev</build_export_depend>
    <build_export_depend>libqt5-opengl-dev</build_export_depend>
    <build_export_depend>libqt5-svg-dev</build_export_depend>
    <build_export_depend>libzmq3-dev</build_export_depend>
    <build_export_depend>rosbag</build_export_depend>
    <build_export_depend>rosbag_storage</build_export_depend>

    <exec_depend>pluginlib</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>behavior_tree_core</exec_depend>
    <exec_depend>qtbase5-dev</exec_depend>
    <exec_depend>libqt5-opengl</exec_depend>
    <exec_depend>libqt5-svg-dev</exec_depend>
    <exec_depend>libzmq3-dev</exec_depend>
    <exec_depend>rosbag</exec_depend>
    <exec_depend>rosbag_storage</exec_depend>
    <exec_depend>behavior_tree_ros</exec_depend>

</package>
