<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>groot</name>
    <version>1.3.1</version>
    <description>Graphical editor to create behaviour trees</description>

    <maintainer email="jponchu@upo.es">Javier Ponce</maintainer>
    <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>

    <license>MIT</license>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <build_depend condition="$ROS_VERSION == 1">cmake_modules</build_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend version_gte="3.2.0">behavior_tree_core</build_depend>
    <build_depend>qtbase5-dev</build_depend>
    <build_depend>libqt5-opengl-dev</build_depend>
    <build_depend>libqt5-svg-dev</build_depend>
    <build_depend>qttools5-dev-tools</build_depend>
    <build_depend>libqt5-core</build_depend>
    <build_depend>libqt5-gui</build_depend>
    <build_depend>libqt5-widgets</build_depend>
    <build_depend>libqt5-xml</build_depend>
    <build_depend>libdw-dev</build_depend>
    <build_depend>libzmq3-dev</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>rosbag_storage</build_depend>

    <build_export_depend>cmake_modules</build_export_depend>
    <build_export_depend>pluginlib</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend version_gte="3.2.0">behavior_tree_core</build_export_depend>
    <build_export_depend>qtbase5-dev</build_export_depend>
    <build_export_depend>libqt5-opengl-dev</build_export_depend>
    <build_export_depend>libqt5-svg-dev</build_export_depend>
    <build_export_depend>qttools5-dev-tools</build_export_depend>
    <build_export_depend>libdw-dev</build_export_depend>
    <build_export_depend>libzmq3-dev</build_export_depend>
    <build_export_depend>rosbag</build_export_depend>
    <build_export_depend>rosbag_storage</build_export_depend>

    <exec_depend>pluginlib</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend version_gte="3.2.0">behavior_tree_core</exec_depend>
    <exec_depend>qtbase5-dev</exec_depend>
    <exec_depend>libqt5-opengl</exec_depend>
    <exec_depend>libqt5-svg-dev</exec_depend>
    <exec_depend>qttools5-dev-tools</exec_depend>
    <exec_depend>libdw-dev</exec_depend>
    <exec_depend>libzmq3-dev</exec_depend>
    <exec_depend>rosbag</exec_depend>
    <exec_depend>rosbag_storage</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
